[package]
name = "iron_planet"
version = "0.2.0"
edition = "2021"
description = "Supernova platform client"
license = "AGPL-3.0"
homepage = "https://supernova.nunl.pt"
repository = "https://gitlab.com/nunl/supernova_client_rust"
keywords = ["Supernova", "service", "API", "client"]
exclude = ["/tests"]


[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_repr = "0.1.7"

ureq = { version = "2.3.0", features = ["json"] }

lazy_static = "1.4.0"

sysinfo = "0.21.1"